syntax = "proto3";

service PetProto{
  rpc GetPetsShelter (GetPetsShelterRequest) returns (GetPetsShelterReply);
}

message GetPetsShelterRequest{
  string petId = 1;
}

message GetPetsShelterReply{
  string shelterId = 1;
}