syntax = "proto3";

service Photo{
  rpc UploadPhoto (UploadPhotoRequest) returns (UploadPhotoReply);
  rpc DeletePhoto (DeletePhotoRequest) returns (DeletePhotoReply);
}

message DeletePhotoRequest{
  string id = 1;
  enum Bucket{
    PetPhotos = 0;
    UserPhotos = 1;
    ShelterPhotos = 2;
  }
  Bucket bucketName = 2;
}

message UploadPhotoRequest{
  string id = 1;
  string name = 2;
  bytes photo = 3;
  enum Bucket{
    PetPhotos = 0;
    UserPhotos = 1;
    ShelterPhotos = 2;
  }
  Bucket bucketName = 4;
}

message UploadPhotoReply{}

message DeletePhotoReply{}